pos marketing details added + work data added

--- a/about.html
+++ b/about.html
@@ -258,8 +258,8 @@
                                 <!-- <div class="img-1 reveal">
                                     <img src="assets/img/images/about-img-2.jpg" alt="about">
                                 </div> -->
-                                <div class="img-2 reveal">
-                                    <img src="assets/img/images/about-img-3.png" alt="about">
+                                <div class="img-2 reveal" >
+                                    <img style="object-fit: cover;" src="assets/img/images/about-img-3.png" alt="about">
                                 </div>
                             </div>
                         </div>
