--- a/details/pos_marketing.html
+++ b/details/pos_marketing.html
@@ -177,8 +177,8 @@
         </button>
         <div class="side-menu-content">
             <div class="side-menu-logo">
-                <a class="dark-img" href="/index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
-                <a class="light-img" href="/index.html"><img src="../assets/img/logo/logo-1.png" alt="logo"></a>
+                <a class="dark-img" href="/index.html"><img src="../assets/img/logo/logo-1.png" alt="logo"></a>
+                <a class="light-img" href="/index.html"><img src="../assets/img/logo/logo-2.png" alt="logo"></a>
             </div>
             <div class="side-menu-about">
                 <div class="side-menu-header">
@@ -227,7 +227,7 @@
     <div id="smooth-wrapper">
         <div id="smooth-content">
 
-            <section class="page-header" data-background="../assets/img/bg-img/page-header-bg.jpg">
+            <section class="page-header" data-background="../assets/img/bg-img/POS_Banner.png">
                 <div class="overlay"></div>
                 <div class="shapes">
                     <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape">
@@ -239,10 +239,7 @@
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
-                        <h1 class="title">POS Marketing</h1>
-                        <h4 class="sub-title"><a class="home" href="/index.html">Home </a><a class="home"
-                                href="/service.html">Service </a><a class="inner-page" href="/service.html">POS
-                                Marketing</a></h4>
+                       
                     </div>
                 </div>
             </section>
@@ -296,145 +293,34 @@
                     <div class="row gy-5">
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/atl_marketing.html">Project 1</a>
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi.html"><br>Bacardi</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Bacardi/Bacardi Superior 300x360.png" alt="service">
 
-                                    <a href="/details/atl_marketing.html" class="service-btn">Read Details <i
+                                    <a href="/project_detials/Pos_marketing/Bacardi.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-lg-3 col-md-6">
-                            <div class="service-item item-3">
-                                <h4 class="service-text"><a href="/details/ttl_marketing.html"> Project 1</a>
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Retail Transformation.html">Retail Transformation</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Bacardi/Bacardi Superior 300x360.png" alt="service">
 
-                                    <a href="/details/ttl_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <h4 class="service-text"><a href="/details/pos_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/pos_marketing.html" class="service-btn">Read Details <i
+                                    <a href="/project_detials/Pos_marketing/Retail Transformation.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/b2b_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/b2b_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/exhibition.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/exhibition.jpg" alt="service">
-
-                                    <a href="/details/exhibition.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/pr_and_media.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/PR&MediaMarketing.jpg" alt="service">
-
-                                    <a href="/details/pr_and_media.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/brand_marketing.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/BrandMarketing.jpg" alt="service">
-
-                                    <a href="/details/brand_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/entertainment_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/EntertainmentMarketing.png" alt="service">
-
-                                    <a href="/details/entertainment_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/merchandise_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/MerchendiseMarketing.jpg" alt="service">
-
-                                    <a href="/details/merchandise_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/corporate_events.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/corporateEvents.jpg" alt="service">
-
-                                    <a href="/details/corporate_events.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
+                        
 
                     </div>
                 </div>
@@ -599,6 +485,7 @@
     <script src="../assets/js/slider.js"></script>
     <script src="../assets/js/contact.js"></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/filter.js"></script>
 </body>
 
 </html>
