--- a/service.html
+++ b/service.html
@@ -38,7 +38,7 @@
                     <div class="header-menu-wrap">
                         <div class="mobile-menu-items">
                             <ul>
-                                <li class=" mega-menu"> <a href="index.html">Home</a>
+                                <li class=" mega-menu"> <a href="/index.html">Home</a>
                                 </li>
                                 <li class="">
                                     <a href="/about.html">About</a>
@@ -222,7 +222,7 @@
                                     <img class="shape shape-2" src="assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal" style=" transform: scaleX(-1);">
-                                    <img src="assets/img/images/about-gear.png" alt="about">
+                                    <img src="assets/img/images/services_hero.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -261,7 +261,7 @@
                                 <div class="filter-dropdown-wrapper">
                                     <div id="brand-selected-text" class="filter-selected-text">
                                         Brand: All
-                                        <i class="fas fa-chevron-down"></i>
+                                        <i class="fas fa-tags"></i>
                                     </div>
                                     <div id="brand-dropdown-menu" class="filter-dropdown-menu">
                                         <ul>
@@ -276,7 +276,7 @@
                     </section>
                     
                     <div class="row gy-5 service-items-container">
-                        <div class="col-lg-3 col-md-6 service-item" data-category="atl" data-brands="brand_a,brand_b">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-1" data-category="ATL Marketing" data-brands="ABInBev, Coca-Cola">
                             <h4 class="service-text"><a href="/details/atl_marketing.html">ATL <br> Marketing</a>
                             </h4>
                             <div class="service-thumb">
@@ -289,7 +289,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 service-item" data-category="ttl" data-brands="brand_b,brand_c">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-2" data-category="TTL Marketing" data-brands="Bacardi, Shell">
                             <h4 class="service-text"><a href="/details/ttl_marketing.html"> TTL <br> Marketing</a>
                             </h4>
                             <div class="service-thumb">
@@ -300,7 +300,7 @@
                                         class="fa-regular fa-arrow-right"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 service-item" data-category="pos" data-brands="brand_a,brand_d">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-3" data-category="POS Marketing" data-brands="Kelloggs, Philips">
                             <h4 class="service-text"><a href="/details/pos_marketing.html">POS <br> Marketing</a>
                             </h4>
                             <div class="service-thumb">
@@ -312,7 +312,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 service-item" data-category="b2b" data-brands="brand_c,brand_e">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-4" data-category="B2B Marketing" data-brands="Exxon Mobil, Zydus">
                             <h4 class="service-text"><a href="/details/b2b_marketing.html">B2B <br> Marketing</a>
                             </h4>
                             <div class="service-thumb">
@@ -324,7 +324,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 service-item" data-category="exhibition" data-brands="brand_a">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-5" data-category="Exhibition" data-brands="ABInBev, Sangam">
                             <h4 class="service-text"><a href="/details/exhibition.html"><br>Exhibitions</a></h4>
                             <div class="service-thumb">
                                 <div class="overlay-color"></div>
@@ -334,7 +334,7 @@
                                         class="fa-regular fa-arrow-right"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 service-item" data-category="pr_and_media" data-brands="brand_b">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-6" data-category="PR & Media" data-brands="Bacardi, Amul">
                             <h4 class="service-text"><a href="/details/pr_and_media.html">PR & <br> Media</a></h4>
                             <div class="service-thumb">
                                 <div class="overlay-color"></div>
@@ -344,7 +344,7 @@
                                         class="fa-regular fa-arrow-right"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 service-item" data-category="brand" data-brands="brand_d">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-7" data-category="Brand Marketing" data-brands="Marks, SSB Homes">
                             <h4 class="service-text"><a href="/details/brand_marketing.html">Brand <br>
                                     Marketing</a></h4>
                             <div class="service-thumb">
@@ -355,7 +355,7 @@
                                         class="fa-regular fa-arrow-right"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 service-item" data-category="entertainment" data-brands="brand_e">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-8" data-category="Entertainment Marketing" data-brands="Whirlpool, Pepsi">
                             <h4 class="service-text"><a href="/details/entertainment_marketing.html">Entertainment <br>
                                     Marketing</a></h4>
                             <div class="service-thumb">
@@ -367,8 +367,8 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 service-item" data-category="merchandise"
-                            data-brands="brand_a,brand_c">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-9" data-category="Merchandise Marketing"
+                            data-brands="Castrol, Honesty Uniforms">
                             <h4 class="service-text"><a href="/details/merchandise_marketing.html">Merchandise <br>
                                     Marketing</a></h4>
                             <div class="service-thumb">
@@ -380,8 +380,8 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 service-item" data-category="corporate_events"
-                            data-brands="brand_b,brand_d">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-10" data-category="Corporate Events"
+                            data-brands="SGMA, Mahaveer Textiles">
                             <h4 class="service-text"><a href="/details/corporate_events.html">Corporate <br>
                                     Events</a></h4>
                             <div class="service-thumb">
@@ -393,15 +393,41 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 service-item" data-category="government_ventures"
-                            data-brands="brand_b,brand_d">
+                        <div class="col-lg-3 col-md-6 service-item" id="service-11" data-category="Government Ventures"
+                            data-brands="Zydus, SGMA">
                             <h4 class="service-text"><a
                                     href="/details/Government_Ventures.html">Government<br />Ventures</a></h4>
                             <div class="service-thumb">
                                 <div class="overlay-color"></div>
-                                <img src="assets/img/service/corporateEvents.jpg" alt="service">
+                                <img src="assets/img/service/Government.png" alt="service">
 
                                 <a href="/details/Government_Ventures.html" class="service-btn">Read Details <i
+                                        class="fa-regular fa-arrow-right"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 service-item" id="service-11" data-category="Gifting"
+                            data-brands="Zydus, SGMA">
+                            <h4 class="service-text"><a
+                                    href="/details/Government_Ventures.html"><br />Gifting</a></h4>
+                            <div class="service-thumb">
+                                <div class="overlay-color"></div>
+                                <img src="assets/img/service/Gifting.png" alt="service">
+
+                                <a href="/details/gifting.html" class="service-btn">Read Details <i
+                                        class="fa-regular fa-arrow-right"></i></a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 service-item" id="service-11" data-category="Packaging"
+                            data-brands="Zydus, SGMA">
+                            <h4 class="service-text"><a
+                                    href="/details/Government_Ventures.html"><br />Packaging</a></h4>
+                            <div class="service-thumb">
+                                <div class="overlay-color"></div>
+                                <img src="assets/img/service/Packaging.png" alt="service">
+
+                                <a href="/details/packaging.html" class="service-btn">Read Details <i
                                         class="fa-regular fa-arrow-right"></i></a>
                             </div>
                         </div>
