--- a/details/gifting.html
+++ b/details/gifting.html
@@ -300,133 +300,6 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item item-3">
-                                <h4 class="service-text"><a href="/details/ttl_marketing.html"> Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/ttl_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <h4 class="service-text"><a href="/details/pos_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/pos_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/b2b_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/b2b_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/gifting.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/exhibition.jpg" alt="service">
-
-                                    <a href="/details/gifting.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/pr_and_media.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/PR&MediaMarketing.jpg" alt="service">
-
-                                    <a href="/details/pr_and_media.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/brand_marketing.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/BrandMarketing.jpg" alt="service">
-
-                                    <a href="/details/brand_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/entertainment_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/EntertainmentMarketing.png" alt="service">
-
-                                    <a href="/details/entertainment_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/merchandise_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/MerchendiseMarketing.jpg" alt="service">
-
-                                    <a href="/details/merchandise_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/corporate_events.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/corporateEvents.jpg" alt="service">
-
-                                    <a href="/details/corporate_events.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </section>
@@ -584,6 +457,7 @@
     <script src="../assets/js/slider.js"></script>
     <script src="../assets/js/contact.js"></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/filter.js"></script>
 </body>
 
 </html>
