--- a/details/merchandise_marketing.html
+++ b/details/merchandise_marketing.html
@@ -222,7 +222,7 @@
     <div id="smooth-wrapper">
         <div id="smooth-content">
 
-            <section class="page-header" data-background="../assets/img/bg-img/page-header-bg.jpg">
+            <section class="page-header" data-background="/assets/img/bg-img/Merchandise.png">
                 <div class="overlay"></div>
                 <div class="shapes">
                     <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
@@ -231,9 +231,9 @@
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
-                        <h1 class="title">Merchandise Marketing</h1>
+                        <!--<h1 class="title">Merchandise Marketing</h1>
                         <h4 class="sub-title"><a class="home" href="/index.html">Home </a><a class="home"
-                                href="/service.html">Service </a><a class="inner-page" href="/service.html">Merchandise Marketing</a></h4>
+                                href="/service.html">Service </a><a class="inner-page" href="/service.html">Merchandise Marketing</a></h4>-->
                     </div>
                 </div>
             </section>
@@ -300,132 +300,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item item-3">
-                                <h4 class="service-text"><a href="/details/ttl_marketing.html"> Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/ttl_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <h4 class="service-text"><a href="/details/pos_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/pos_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/b2b_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/b2b_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/exhibition.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/exhibition.jpg" alt="service">
-
-                                    <a href="/details/exhibition.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/pr_and_media.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/PR&MediaMarketing.jpg" alt="service">
-
-                                    <a href="/details/pr_and_media.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/brand_marketing.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/BrandMarketing.jpg" alt="service">
-
-                                    <a href="/details/brand_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/entertainment_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/EntertainmentMarketing.png" alt="service">
-
-                                    <a href="/details/entertainment_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/merchandise_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/MerchendiseMarketing.jpg" alt="service">
-
-                                    <a href="/details/merchandise_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/corporate_events.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/corporateEvents.jpg" alt="service">
-
-                                    <a href="/details/corporate_events.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
+                        
 
                     </div>
                 </div>
@@ -584,6 +459,7 @@
     <script src="../assets/js/slider.js"></script>
     <script src="../assets/js/contact.js"></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/filter.js"></script>
 </body>
 
 </html>
