--- a/details/ttl_marketing.html
+++ b/details/ttl_marketing.html
@@ -584,6 +584,7 @@
     <script src="../assets/js/slider.js"></script>
     <script src="../assets/js/contact.js"></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/filter.js"></script>
 </body>
 
 </html>
