--- a/project_detials/Corporate_events/Brewmatica.html
+++ b/project_detials/Corporate_events/Brewmatica.html
@@ -39,7 +39,7 @@
                     <div class="header-menu-wrap">
                         <div class="mobile-menu-items">
                             <ul>
-                                <li class=" mega-menu"> <a href="index.html">Home</a>
+                                <li class=" mega-menu"> <a href="/index.html">Home</a>
                                     <!-- <ul>
                                             <li><a href="index.html">Web Design</a></li>
                                             <li><a href="index-2.html">Creative Studio</a></li>
@@ -253,7 +253,7 @@
                         <div class="col-lg-12">
                             <div class="project-details-content">
                                 <div class="project-details-img">
-                                    <img src="/assets/img/project/project-img-1.jpg" alt="project">
+                                    <img src="/assets/img/project_details/Brewmatica/Brewmatica1380x700 .png" alt="project">
                                 </div>
                                 <div class="project-details-items">
                                     <div class="project-details-item">
@@ -297,8 +297,8 @@
                         <div class="col-lg-7 col-md-12 order-lg-2 order-1">
                             <div class="about-content-2 fade-wrapper">
                                 <div class="section-heading">
-                                    <h4 class="sub-heading after-none" data-text-animation="fade-in"
-                                        data-duration="1.5">ABInBev</h4>
+                                    <!--<h4 class="sub-heading after-none" data-text-animation="fade-in"
+                                        data-duration="1.5">ABInBev</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
                                         Brewmatica – AB InBev
@@ -326,7 +326,8 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="/assets/img/images/JB_Main_Menu_1.png" alt="about">
+                                    <img src="/assets/img/project_details/Brewmatica/Brewmatica Logo 519x480 .png" alt="about">
+
                                 </div>
                             </div>
                         </div>
@@ -347,7 +348,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="../assets/img/mockup.png" alt="about">
+                                    <img src="/assets/img/project_details/Brewmatica/Brewmatica Logo 519x480 .png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -356,8 +357,8 @@
                         <div class="col-lg-7 col-md-12 order-lg-1 order-1">
                             <div class="about-content-2 fade-wrapper">
                                 <div class="section-heading">
-                                    <h4 class="sub-heading after-none" data-text-animation="fade-in"
-                                        data-duration="1.5">ABInBev</h4>
+                                    <!--<h4 class="sub-heading after-none" data-text-animation="fade-in"
+                                        data-duration="1.5">ABInBev</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
                                         Logo Design
@@ -385,8 +386,8 @@
                         <div class="col-lg-7 col-md-12 order-lg-2 order-1">
                             <div class="about-content-2 fade-wrapper">
                                 <div class="section-heading">
-                                    <h4 class="sub-heading after-none" data-text-animation="fade-in"
-                                        data-duration="1.5">ABInBev</h4>
+                                    <!--<h4 class="sub-heading after-none" data-text-animation="fade-in"
+                                        data-duration="1.5">ABInBev</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
                                         Help desk table design
@@ -420,7 +421,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="/assets/img/images/JB_Main_Menu_1.png" alt="about">
+                                    <img src="/assets/img/project_details/Brewmatica/Brewmatica Help desk 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -436,8 +437,8 @@
                         <!-- Image Column (Now on the Right) -->
                         <div class="col-lg-5 col-md-12 order-lg-2 order-2">
                             <div class="about-img-box">
-                                <div class="img-11 reveal">
-                                    <img src="../assets/img/mockup.png" alt="about">
+                                <div class="img-2 reveal">
+                                    <img src="/assets/img/project_details/Brewmatica/Brewmatica Arch 519x480 .png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -446,8 +447,8 @@
                         <div class="col-lg-7 col-md-12 order-lg-1 order-1">
                             <div class="about-content-2 fade-wrapper">
                                 <div class="section-heading">
-                                    <h4 class="sub-heading after-none" data-text-animation="fade-in"
-                                        data-duration="1.5">ABInBev</h4>
+                                    <!--<h4 class="sub-heading after-none" data-text-animation="fade-in"
+                                        data-duration="1.5">ABInBev</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
                                         Arch gate & cube stack installation
@@ -477,8 +478,8 @@
                         <div class="col-lg-7 col-md-12 order-lg-2 order-1">
                             <div class="about-content-2 fade-wrapper">
                                 <div class="section-heading">
-                                    <h4 class="sub-heading after-none" data-text-animation="fade-in"
-                                        data-duration="1.5">ABInBev</h4>
+                                    <!--<h4 class="sub-heading after-none" data-text-animation="fade-in"
+                                        data-duration="1.5">ABInBev</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
                                         Can standee designs
@@ -505,7 +506,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="/assets/img/images/JB_Main_Menu_1.png" alt="about">
+                                    <img src="/assets/img/project_details/Brewmatica/Brewmatica can standee 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -519,8 +520,8 @@
                         <!-- Image Column (Now on the Right) -->
                         <div class="col-lg-5 col-md-12 order-lg-2 order-2">
                             <div class="about-img-box">
-                                <div class="img-11 reveal">
-                                    <img src="../assets/img/mockup.png" alt="about">
+                                <div class="img-2 reveal">
+                                    <img src="/assets/img/project_details/Brewmatica/Brewmatica Calender 519x480 .png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -529,8 +530,8 @@
                         <div class="col-lg-7 col-md-12 order-lg-1 order-1">
                             <div class="about-content-2 fade-wrapper">
                                 <div class="section-heading">
-                                    <h4 class="sub-heading after-none" data-text-animation="fade-in"
-                                        data-duration="1.5">ABInBev</h4>
+                                    <!--<h4 class="sub-heading after-none" data-text-animation="fade-in"
+                                        data-duration="1.5">ABInBev</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
                                         Event Calendars
