--- a/project_detials/Government_Ventures/Ayodhya_UP_Gov.html
+++ b/project_detials/Government_Ventures/Ayodhya_UP_Gov.html
@@ -39,7 +39,7 @@
                     <div class="header-menu-wrap">
                         <div class="mobile-menu-items">
                             <ul>
-                                <li class=" mega-menu"> <a href="index.html">Home</a>
+                                <li class=" mega-menu"> <a href="/index.html">Home</a>
                                     <!-- <ul>
                                             <li><a href="index.html">Web Design</a></li>
                                             <li><a href="index-2.html">Creative Studio</a></li>
